src/cimgui_ext/include/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef int ImGuiPopupFlags;        
typedef int ImGuiTableFlags;        
typedef int ImGuiTableRowFlags;     
typedef int ImGuiWindowFlags;       
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API bool ImGui_BeginTooltip(void);                                        
CIMGUI_API void ImGui_EndTooltip(void);                                          
CIMGUI_API void ImGui_SetTooltipUnformatted(const char* text);                   
CIMGUI_API bool ImGui_BeginItemTooltip(void);                                        
CIMGUI_API void ImGui_SetItemTooltipUnformatted(const char* text);                   
CIMGUI_API bool ImGui_BeginPopup(const char* str_id, ImGuiWindowFlags flags );                                
CIMGUI_API bool ImGui_BeginPopupModal(const char* name, bool* p_open , ImGuiWindowFlags flags );  
CIMGUI_API void ImGui_EndPopup(void);                                                                                  
CIMGUI_API void ImGui_OpenPopup(const char* str_id, ImGuiPopupFlags popup_flags );                          
CIMGUI_API void ImGui_OpenPopupID(ImGuiID id, ImGuiPopupFlags popup_flags );                                
CIMGUI_API void ImGui_OpenPopupOnItemClick(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API void ImGui_CloseCurrentPopup(void);                                                                       
CIMGUI_API bool ImGui_BeginPopupContextItem(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_BeginPopupContextWindow(const char* str_id , ImGuiPopupFlags popup_flags );  
CIMGUI_API bool ImGui_BeginPopupContextVoid(const char* str_id , ImGuiPopupFlags popup_flags );    
CIMGUI_API bool ImGui_IsPopupOpen(const char* str_id, ImGuiPopupFlags flags );  
CIMGUI_API bool ImGui_BeginTable(const char* str_id, int columns, ImGuiTableFlags flags , ImVec2 outer_size , float inner_width );
CIMGUI_API void ImGui_EndTable(void);                     
CIMGUI_API void ImGui_TableNextRow(ImGuiTableRowFlags row_flags , float min_row_height ); 
CIMGUI_API bool ImGui_TableNextColumn(void);              
CIMGUI_API bool ImGui_TableSetColumnIndex(int column_n);  
typedef enum
{
    ImGuiPopupFlags_None                    = 0,
    ImGuiPopupFlags_MouseButtonLeft         = 0,      
    ImGuiPopupFlags_MouseButtonRight        = 1,      
    ImGuiPopupFlags_MouseButtonMiddle       = 2,      
    ImGuiPopupFlags_MouseButtonMask_        = 0x1F,
    ImGuiPopupFlags_MouseButtonDefault_     = 1,
    ImGuiPopupFlags_NoReopen                = 1<<5,   
    ImGuiPopupFlags_NoOpenOverExistingPopup = 1<<7,   
    ImGuiPopupFlags_NoOpenOverItems         = 1<<8,   
    ImGuiPopupFlags_AnyPopupId              = 1<<10,  
    ImGuiPopupFlags_AnyPopupLevel           = 1<<11,  
    ImGuiPopupFlags_AnyPopup                = ImGuiPopupFlags_AnyPopupId | ImGuiPopupFlags_AnyPopupLevel,
} ImGuiPopupFlags_;
typedef enum
{
    ImGuiHoveredFlags_None                         = 0,      
    ImGuiHoveredFlags_ChildWindows                 = 1<<0,   
    ImGuiHoveredFlags_RootWindow                   = 1<<1,   
    ImGuiHoveredFlags_AnyWindow                    = 1<<2,   
    ImGuiHoveredFlags_NoPopupHierarchy             = 1<<3,   
    ImGuiHoveredFlags_AllowWhenBlockedByPopup      = 1<<5,   
    ImGuiHoveredFlags_AllowWhenBlockedByActiveItem = 1<<7,   
    ImGuiHoveredFlags_AllowWhenOverlappedByItem    = 1<<8,   
    ImGuiHoveredFlags_AllowWhenOverlappedByWindow  = 1<<9,   
    ImGuiHoveredFlags_AllowWhenDisabled            = 1<<10,  
    ImGuiHoveredFlags_NoNavOverride                = 1<<11,  
    ImGuiHoveredFlags_AllowWhenOverlapped          = ImGuiHoveredFlags_AllowWhenOverlappedByItem | ImGuiHoveredFlags_AllowWhenOverlappedByWindow,
    ImGuiHoveredFlags_RectOnly                     = ImGuiHoveredFlags_AllowWhenBlockedByPopup | ImGuiHoveredFlags_AllowWhenBlockedByActiveItem | ImGuiHoveredFlags_AllowWhenOverlapped,
    ImGuiHoveredFlags_RootAndChildWindows          = ImGuiHoveredFlags_RootWindow | ImGuiHoveredFlags_ChildWindows,
    ImGuiHoveredFlags_ForTooltip                   = 1<<12,  
    ImGuiHoveredFlags_Stationary                   = 1<<13,  
    ImGuiHoveredFlags_DelayNone                    = 1<<14,  
    ImGuiHoveredFlags_DelayShort                   = 1<<15,  
    ImGuiHoveredFlags_DelayNormal                  = 1<<16,  
    ImGuiHoveredFlags_NoSharedDelay                = 1<<17,  
} ImGuiHoveredFlags_;
typedef enum
{
    ImGuiTableFlags_None                       = 0,
    ImGuiTableFlags_Resizable                  = 1<<0,   
    ImGuiTableFlags_Reorderable                = 1<<1,   
    ImGuiTableFlags_Hideable                   = 1<<2,   
    ImGuiTableFlags_Sortable                   = 1<<3,   
    ImGuiTableFlags_NoSavedSettings            = 1<<4,   
    ImGuiTableFlags_ContextMenuInBody          = 1<<5,   
    ImGuiTableFlags_RowBg                      = 1<<6,   
    ImGuiTableFlags_BordersInnerH              = 1<<7,   
    ImGuiTableFlags_BordersOuterH              = 1<<8,   
    ImGuiTableFlags_BordersInnerV              = 1<<9,   
    ImGuiTableFlags_BordersOuterV              = 1<<10,  
    ImGuiTableFlags_BordersH                   = ImGuiTableFlags_BordersInnerH | ImGuiTableFlags_BordersOuterH, 
    ImGuiTableFlags_BordersV                   = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersOuterV, 
    ImGuiTableFlags_BordersInner               = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersInnerH, 
    ImGuiTableFlags_BordersOuter               = ImGuiTableFlags_BordersOuterV | ImGuiTableFlags_BordersOuterH, 
    ImGuiTableFlags_Borders                    = ImGuiTableFlags_BordersInner | ImGuiTableFlags_BordersOuter, 
    ImGuiTableFlags_NoBordersInBody            = 1<<11,  
    ImGuiTableFlags_NoBordersInBodyUntilResize = 1<<12,  
    ImGuiTableFlags_SizingFixedFit             = 1<<13,  
    ImGuiTableFlags_SizingFixedSame            = 2<<13,  
    ImGuiTableFlags_SizingStretchProp          = 3<<13,  
    ImGuiTableFlags_SizingStretchSame          = 4<<13,  
    ImGuiTableFlags_NoHostExtendX              = 1<<16,  
    ImGuiTableFlags_NoHostExtendY              = 1<<17,  
    ImGuiTableFlags_NoKeepColumnsVisible       = 1<<18,  
    ImGuiTableFlags_PreciseWidths              = 1<<19,  
    ImGuiTableFlags_NoClip                     = 1<<20,  
    ImGuiTableFlags_PadOuterX                  = 1<<21,  
    ImGuiTableFlags_NoPadOuterX                = 1<<22,  
    ImGuiTableFlags_NoPadInnerX                = 1<<23,  
    ImGuiTableFlags_ScrollX                    = 1<<24,  
    ImGuiTableFlags_ScrollY                    = 1<<25,  
    ImGuiTableFlags_SortMulti                  = 1<<26,  
    ImGuiTableFlags_SortTristate               = 1<<27,  
    ImGuiTableFlags_HighlightHoveredColumn     = 1<<28,  
    ImGuiTableFlags_SizingMask_                = ImGuiTableFlags_SizingFixedFit | ImGuiTableFlags_SizingFixedSame | ImGuiTableFlags_SizingStretchProp | ImGuiTableFlags_SizingStretchSame,
} ImGuiTableFlags_;
typedef enum
{
    ImGuiTableColumnFlags_None                 = 0,
    ImGuiTableColumnFlags_Disabled             = 1<<0,   
    ImGuiTableColumnFlags_DefaultHide          = 1<<1,   
    ImGuiTableColumnFlags_DefaultSort          = 1<<2,   
    ImGuiTableColumnFlags_WidthStretch         = 1<<3,   
    ImGuiTableColumnFlags_WidthFixed           = 1<<4,   
    ImGuiTableColumnFlags_NoResize             = 1<<5,   
    ImGuiTableColumnFlags_NoReorder            = 1<<6,   
    ImGuiTableColumnFlags_NoHide               = 1<<7,   
    ImGuiTableColumnFlags_NoClip               = 1<<8,   
    ImGuiTableColumnFlags_NoSort               = 1<<9,   
    ImGuiTableColumnFlags_NoSortAscending      = 1<<10,  
    ImGuiTableColumnFlags_NoSortDescending     = 1<<11,  
    ImGuiTableColumnFlags_NoHeaderLabel        = 1<<12,  
    ImGuiTableColumnFlags_NoHeaderWidth        = 1<<13,  
    ImGuiTableColumnFlags_PreferSortAscending  = 1<<14,  
    ImGuiTableColumnFlags_PreferSortDescending = 1<<15,  
    ImGuiTableColumnFlags_IndentEnable         = 1<<16,  
    ImGuiTableColumnFlags_IndentDisable        = 1<<17,  
    ImGuiTableColumnFlags_AngledHeader         = 1<<18,  
    ImGuiTableColumnFlags_IsEnabled            = 1<<24,  
    ImGuiTableColumnFlags_IsVisible            = 1<<25,  
    ImGuiTableColumnFlags_IsSorted             = 1<<26,  
    ImGuiTableColumnFlags_IsHovered            = 1<<27,  
    ImGuiTableColumnFlags_WidthMask_           = ImGuiTableColumnFlags_WidthStretch | ImGuiTableColumnFlags_WidthFixed,
    ImGuiTableColumnFlags_IndentMask_          = ImGuiTableColumnFlags_IndentEnable | ImGuiTableColumnFlags_IndentDisable,
    ImGuiTableColumnFlags_StatusMask_          = ImGuiTableColumnFlags_IsEnabled | ImGuiTableColumnFlags_IsVisible | ImGuiTableColumnFlags_IsSorted | ImGuiTableColumnFlags_IsHovered,
    ImGuiTableColumnFlags_NoDirectResize_      = 1<<30,  
} ImGuiTableColumnFlags_;
CIMGUI_API bool   ImGui_ComboObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool   ImGui_ListBoxObsolete(const char* label, int* current_item, bool (*old_callback)(void* user_data, int idx, const char** out_text), void* user_data, int items_count, int height_in_items );