src/Editor/LibreLancer.ImUI/ImGuiBindings/Generated/ImGuiNative.cs


    /// <summary>
    /// <para>Tooltips</para>
    /// <para>- Tooltips are windows following the mouse. They do not take focus away.</para>
    /// <para>- A tooltip window can contain items of any types.</para>
    /// <para>- SetTooltip() is more or less a shortcut for the 'if (BeginTooltip()) { Text(...); EndTooltip(); }' idiom (with a subtlety that it discard any previously submitted tooltip)</para>
    /// begin/append a tooltip window.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginTooltip();

    /// <summary>
    /// only call EndTooltip() if BeginTooltip()/BeginItemTooltip() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndTooltip();

    /// <summary>
    /// set a text-only tooltip. Often used after a ImGui::IsItemHovered() check. Override any previous call to SetTooltip().
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetTooltipUnformatted(byte* text);

    /// <summary>
    /// <para>Tooltips: helpers for showing a tooltip when hovering an item</para>
    /// <para>- BeginItemTooltip() is a shortcut for the 'if (IsItemHovered(ImGuiHoveredFlags_ForTooltip) &amp;&amp; BeginTooltip())' idiom.</para>
    /// <para>- SetItemTooltip() is a shortcut for the 'if (IsItemHovered(ImGuiHoveredFlags_ForTooltip)) { SetTooltip(...); }' idiom.</para>
    /// <para>- Where 'ImGuiHoveredFlags_ForTooltip' itself is a shortcut to use 'style.HoverFlagsForTooltipMouse' or 'style.HoverFlagsForTooltipNav' depending on active input type. For mouse it defaults to 'ImGuiHoveredFlags_Stationary | ImGuiHoveredFlags_DelayShort'.</para>
    /// begin/append a tooltip window if preceding item was hovered.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginItemTooltip();

    /// <summary>
    /// set a text-only tooltip if preceding item was hovered. override any previous call to SetTooltip().
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_SetItemTooltipUnformatted(byte* text);

    /// <summary>
    /// <para>Popups, Modals</para>
    /// <para>- They block normal mouse hovering detection (and therefore most mouse interactions) behind them.</para>
    /// <para>- If not modal: they can be closed by clicking anywhere outside them, or by pressing ESCAPE.</para>
    /// <para>- Their visibility state (~bool) is held internally instead of being held by the programmer as we are used to with regular Begin*() calls.</para>
    /// <para>- The 3 properties above are related: we need to retain popup visibility state in the library because popups may be closed as any time.</para>
    /// <para>- You can bypass the hovering restriction by using ImGuiHoveredFlags_AllowWhenBlockedByPopup when calling IsItemHovered() or IsWindowHovered().</para>
    /// <para>- IMPORTANT: Popup identifiers are relative to the current ID stack, so OpenPopup and BeginPopup generally needs to be at the same level of the stack.</para>
    /// <para>This is sometimes leading to confusing mistakes. May rework this in the future.</para>
    /// <para>- BeginPopup(): query popup state, if open start appending into the window. Call EndPopup() afterwards if returned true. ImGuiWindowFlags are forwarded to the window.</para>
    /// <para>- BeginPopupModal(): block every interaction behind the window, cannot be closed by user, add a dimming background, has a title bar.</para>
    /// return true if the popup is open, and you can start outputting to it.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginPopup(byte* str_id, ImGuiWindowFlags flags);

    /// <summary>
    /// return true if the modal is open, and you can start outputting to it.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginPopupModal(byte* name, byte* p_open, ImGuiWindowFlags flags);

    /// <summary>
    /// only call EndPopup() if BeginPopupXXX() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndPopup();

    /// <summary>
    /// <para>Popups: open/close functions</para>
    /// <para>- OpenPopup(): set popup state to open. ImGuiPopupFlags are available for opening options.</para>
    /// <para>- If not modal: they can be closed by clicking anywhere outside them, or by pressing ESCAPE.</para>
    /// <para>- CloseCurrentPopup(): use inside the BeginPopup()/EndPopup() scope to close manually.</para>
    /// <para>- CloseCurrentPopup() is called by default by Selectable()/MenuItem() when activated (FIXME: need some options).</para>
    /// <para>- Use ImGuiPopupFlags_NoOpenOverExistingPopup to avoid opening a popup if there's already one at the same level. This is equivalent to e.g. testing for !IsAnyPopupOpen() prior to OpenPopup().</para>
    /// <para>- Use IsWindowAppearing() after BeginPopup() to tell if a window just opened.</para>
    /// <para>- IMPORTANT: Notice that for OpenPopupOnItemClick() we exceptionally default flags to 1 (== ImGuiPopupFlags_MouseButtonRight) for backward compatibility with older API taking 'int mouse_button = 1' parameter</para>
    /// call to mark popup as open (don't call every frame!).
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_OpenPopup(byte* str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// id overload to facilitate calling from nested stacks
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_OpenPopupID(uint id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// helper to open popup when clicked on last item. Default to ImGuiPopupFlags_MouseButtonRight == 1. (note: actually triggers on the mouse _released_ event to be consistent with popup behaviors)
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_OpenPopupOnItemClick(byte* str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// manually close the popup we have begin-ed into.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_CloseCurrentPopup();

    /// <summary>
    /// <para>Popups: open+begin combined functions helpers</para>
    /// <para>- Helpers to do OpenPopup+BeginPopup where the Open action is triggered by e.g. hovering an item and right-clicking.</para>
    /// <para>- They are convenient to easily create context menus, hence the name.</para>
    /// <para>- IMPORTANT: Notice that BeginPopupContextXXX takes ImGuiPopupFlags just like OpenPopup() and unlike BeginPopup(). For full consistency, we may add ImGuiWindowFlags to the BeginPopupContextXXX functions in the future.</para>
    /// <para>- IMPORTANT: Notice that we exceptionally default their flags to 1 (== ImGuiPopupFlags_MouseButtonRight) for backward compatibility with older API taking 'int mouse_button = 1' parameter, so if you add other flags remember to re-add the ImGuiPopupFlags_MouseButtonRight.</para>
    /// open+begin popup when clicked on last item. Use str_id==NULL to associate the popup to previous item. If you want to use that on a non-interactive item such as Text() you need to pass in an explicit ID here. read comments in .cpp!
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginPopupContextItem(byte* str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// open+begin popup when clicked on current window.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginPopupContextWindow(byte* str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// open+begin popup when clicked in void (where there are no windows).
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginPopupContextVoid(byte* str_id, ImGuiPopupFlags popup_flags);

    /// <summary>
    /// <para>Popups: query functions</para>
    /// <para>- IsPopupOpen(): return true if the popup is open at the current BeginPopup() level of the popup stack.</para>
    /// <para>- IsPopupOpen() with ImGuiPopupFlags_AnyPopupId: return true if any popup is open at the current BeginPopup() level of the popup stack.</para>
    /// <para>- IsPopupOpen() with ImGuiPopupFlags_AnyPopupId + ImGuiPopupFlags_AnyPopupLevel: return true if any popup is open.</para>
    /// return true if the popup is open.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_IsPopupOpen(byte* str_id, ImGuiPopupFlags flags);

    /// <summary>
    /// <para>Tables</para>
    /// <para>- Full-featured replacement for old Columns API.</para>
    /// <para>- See Demo-&gt;Tables for demo code. See top of imgui_tables.cpp for general commentary.</para>
    /// <para>- See ImGuiTableFlags_ and ImGuiTableColumnFlags_ enums for a description of available flags.</para>
    /// <para>The typical call flow is:</para>
    /// <para>- 1. Call BeginTable(), early out if returning false.</para>
    /// <para>- 2. Optionally call TableSetupColumn() to submit column name/flags/defaults.</para>
    /// <para>- 3. Optionally call TableSetupScrollFreeze() to request scroll freezing of columns/rows.</para>
    /// <para>- 4. Optionally call TableHeadersRow() to submit a header row. Names are pulled from TableSetupColumn() data.</para>
    /// <para>- 5. Populate contents:</para>
    /// <para>- In most situations you can use TableNextRow() + TableSetColumnIndex(N) to start appending into a column.</para>
    /// <para>- If you are using tables as a sort of grid, where every column is holding the same type of contents,</para>
    /// <para>you may prefer using TableNextColumn() instead of TableNextRow() + TableSetColumnIndex().</para>
    /// <para>TableNextColumn() will automatically wrap-around into the next row if needed.</para>
    /// <para>- IMPORTANT: Comparatively to the old Columns() API, we need to call TableNextColumn() for the first column!</para>
    /// <para>- Summary of possible call flow:</para>
    /// <para>- TableNextRow() -&gt; TableSetColumnIndex(0) -&gt; Text("Hello 0") -&gt; TableSetColumnIndex(1) -&gt; Text("Hello 1")  // OK</para>
    /// <para>- TableNextRow() -&gt; TableNextColumn()      -&gt; Text("Hello 0") -&gt; TableNextColumn()      -&gt; Text("Hello 1")  // OK</para>
    /// <para>-                   TableNextColumn()      -&gt; Text("Hello 0") -&gt; TableNextColumn()      -&gt; Text("Hello 1")  // OK: TableNextColumn() automatically gets to next row!</para>
    /// <para>- TableNextRow()                           -&gt; Text("Hello 0")                                               // Not OK! Missing TableSetColumnIndex() or TableNextColumn()! Text will not appear!</para>
    /// - 5. Call EndTable()
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_BeginTable(byte* str_id, int columns, ImGuiTableFlags flags, System.Numerics.Vector2 outer_size, float inner_width);

    /// <summary>
    /// only call EndTable() if BeginTable() returns true!
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_EndTable();

    /// <summary>
    /// append into the first cell of a new row.
    /// </summary>
    [DllImport("cimgui")]
    public static extern void ImGui_TableNextRow(ImGuiTableRowFlags row_flags, float min_row_height);

    /// <summary>
    /// append into the next column (or first column of next row if currently in last column). Return true when column is visible.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TableNextColumn();

    /// <summary>
    /// append into the specified column. Return true when column is visible.
    /// </summary>
    [DllImport("cimgui")]
    public static extern byte ImGui_TableSetColumnIndex(int column_n);
